# mathlib-evanjjh

./: .gitignore  README.md  README_evanjjh.md  main.py  pyproject.toml
src/mathlib_evanjjh/: arithmetic.py  geometric.py  trigonometry.py
tests/: test_arithmetic.py  test_geometric.py  test_trigonometry.py
