[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathlib-evanjjh"
version = "0.1.4"
authors = [{ name = "EvanJJH", email = "j2hoon85@gmail.com" }]
description = "A class-based Python utility package for arithmetic, geometric sequences, and trigonometry"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dschloe/mathlib-evanjjh"

[dependency-groups]
dev = ["pytest>=8.0", "twine>=6.1.0"]